ALTER TABLE services
    ALTER COLUMN price TYPE NUMERIC(19, 2);

ALTER TABLE services
    ADD CONSTRAINT ck_services_price_non_negative CHECK (price >= 0);

ALTER TABLE services
    ADD CONSTRAINT uk_services_business_id_id UNIQUE (business_id, id);

ALTER TABLE business_locations
    ADD CONSTRAINT uk_locations_business_id_id UNIQUE (business_id, id);

CREATE TABLE offering_locations (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    business_id BIGINT NOT NULL,
    service_id BIGINT NOT NULL,
    location_id BIGINT NOT NULL,
    CONSTRAINT uk_offering_location UNIQUE (service_id, location_id),
    CONSTRAINT fk_offering_location_business
        FOREIGN KEY (business_id) REFERENCES businesses (id),
    CONSTRAINT fk_offering_location_service_tenant
        FOREIGN KEY (business_id, service_id)
        REFERENCES services (business_id, id),
    CONSTRAINT fk_offering_location_location_tenant
        FOREIGN KEY (business_id, location_id)
        REFERENCES business_locations (business_id, id)
);

CREATE INDEX idx_offering_locations_location
    ON offering_locations (location_id, service_id);

INSERT INTO offering_locations (business_id, service_id, location_id)
SELECT service.business_id, service.id, location.id
FROM services service
JOIN business_locations location
    ON location.business_id = service.business_id
WHERE location.active = TRUE;
