ALTER TABLE offering_locations
    ADD CONSTRAINT uk_offering_locations_tenant_service_location
        UNIQUE (business_id, service_id, location_id);

CREATE TABLE resources (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    business_id BIGINT NOT NULL,
    location_id BIGINT NOT NULL,
    name VARCHAR(120) NOT NULL,
    description VARCHAR(500),
    type VARCHAR(30) NOT NULL,
    capacity INTEGER NOT NULL,
    active BOOLEAN NOT NULL DEFAULT TRUE,
    created_at TIMESTAMP NOT NULL,
    updated_at TIMESTAMP NOT NULL,
    CONSTRAINT uk_resource_location_name UNIQUE (location_id, name),
    CONSTRAINT uk_resources_tenant_location_id UNIQUE (business_id, location_id, id),
    CONSTRAINT fk_resource_business
        FOREIGN KEY (business_id) REFERENCES businesses (id),
    CONSTRAINT fk_resource_location_tenant
        FOREIGN KEY (business_id, location_id)
        REFERENCES business_locations (business_id, id),
    CONSTRAINT ck_resource_type CHECK (
        type IN ('PROFESSIONAL', 'COURT', 'ROOM', 'DESK', 'EQUIPMENT')
    ),
    CONSTRAINT ck_resource_capacity_positive CHECK (capacity > 0)
);

CREATE INDEX idx_resources_location_active
    ON resources (location_id, active);

CREATE TABLE offering_resources (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    business_id BIGINT NOT NULL,
    service_id BIGINT NOT NULL,
    location_id BIGINT NOT NULL,
    resource_id BIGINT NOT NULL,
    CONSTRAINT uk_offering_resource UNIQUE (service_id, resource_id),
    CONSTRAINT fk_offering_resource_business
        FOREIGN KEY (business_id) REFERENCES businesses (id),
    CONSTRAINT fk_offering_resource_service_location
        FOREIGN KEY (business_id, service_id, location_id)
        REFERENCES offering_locations (business_id, service_id, location_id),
    CONSTRAINT fk_offering_resource_tenant_location
        FOREIGN KEY (business_id, location_id, resource_id)
        REFERENCES resources (business_id, location_id, id)
);

CREATE INDEX idx_offering_resources_resource
    ON offering_resources (resource_id, service_id);
